app/src/main/kotlin/com/example/dmitry/grades/ui/base/ui/errors/UIError.kt
package com.example.dmitry.grades.ui.base.ui.errors

data class UIError(val throwable: Throwable, val message: String)